--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.x"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
